--- a/npmv/package.json
+++ b/npmv/package.json
@@ -25,9 +25,11 @@
   ],
   "type": "module",
   "dependencies": {
+    "@3-/token": "^0.1.3",
     "@3-/u8": "^0.1.1",
     "@3-/utf8": "^0.0.3",
-    "@aws-sdk/client-s3": "^3.600.0",
-    "@aws-sdk/types": "^3.598.0"
+    "@aws-sdk/client-s3": "^3.606.0",
+    "@aws-sdk/types": "^3.598.0",
+    "esbuild": "^0.22.0"
   }
 }
