--- a/token/package.json
+++ b/token/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "@3-/npmv_refresh",
-  "version": "0.1.0",
+  "name": "@3-/token",
+  "version": "0.1.3",
   "repository": {
     "type": "git",
     "url": "git+https://atomgit.com/i18n/lib.git"
   },
-  "homepage": "https://atomgit.com/i18n/lib/tree/dev/npmv_refresh",
+  "homepage": "https://atomgit.com/i18n/lib/tree/dev/token",
   "author": "i18n.site@gmail.com",
   "license": "Apache-2.0",
   "exports": {
-    ".": "./lib/lib.js",
     "./*": "./lib/*"
   },
   "files": [
@@ -19,9 +18,7 @@
   "scripts": {},
   "type": "module",
   "dependencies": {
-    "@3-/ipreq": "^0.1.21",
-    "@3-/pgw": "^0.1.4",
-    "@3-/utf8": "^0.0.3",
-    "esbuild": "^0.21.5"
+    "@3-/u8": "^0.1.1",
+    "@3-/vb": "^0.1.5"
   }
 }
